--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         @media screen and (min-width: 1620px){
             .header{
           
-            background-image: url('./bg.jpg');
+            background-image: url('./herop.jpg');
             background-repeat: no-repeat;
             border-radius: 5px;
             object-fit: cover;
